# airhust_tutorial_ws

./: README.md
src/sim_task/: CMakeLists.txt  package.xml
src/sim_task/config/: px4_config.yaml
src/sim_task/launch/: task.launch
src/sim_task/models/gate/: model.config  model.sdf
src/sim_task/models/letters/: model.config  model.sdf
src/sim_task/models/letters/materials/scripts/: letters.material
src/sim_task/models/numbers/: model.sdf
src/sim_task/models/numbers/materials/scripts/: numbers.material
src/sim_task/models/qr_node/: model.config  model.sdf
src/sim_task/models/qr_node/materials/scripts/: qr_node.material
src/template/: CMakeLists.txt  package.xml
src/template/config/: template.yaml
src/template/include/: template.h
src/template/launch/: template.launch
src/template/src/: template.cpp
